tests/lean/248.lean.expected.out
248.lean:1:2-1:20: error: invalid 'implemented_by' argument 'foo', function cannot be implemented by itself
