tests/lean/248.lean
@[implemented_by foo] opaque foo (x : Nat) : Nat
